--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blogody/api-client",
-  "version": "1.0.14",
+  "version": "1.0.19",
   "private": false,
   "author": "Joost Jansky",
   "license": "MIT",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "graphql": "^15.5.1",
-    "urql": "^2.0.4",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "urql": "^2.0.4"
   }
 }
