--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,9 @@
     "target": "es2015",
     "module": "commonjs",
     "strict": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "preserve",
     "esModuleInterop": true,
