--- a/tsconfig.build-cjs.json
+++ b/tsconfig.build-cjs.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.build.json",
 
   "compilerOptions": {
-    "outDir": "./dist/cjs"
+    "outDir": "./dist/cjs",
+    "target": "es2015",
+    "module": "commonjs"
   },
 
   "include": ["src/**/*"]
