--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@blogody/api-client",
-  "version": "1.4.0",
+  "version": "2.1.0",
   "private": false,
   "author": "Joost Jansky",
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/mjs/index.js",
+  "types": "dist/mjs/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/mjs/index.js",
