--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blogody/api-client",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "private": false,
   "author": "Joost Jansky",
   "license": "MIT",
@@ -36,8 +36,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@urql/core": "^2.3.1",
     "graphql": "^15.5.1",
-    "react": "^17.0.2",
-    "urql": "^2.0.4"
+    "react": "^17.0.2"
   }
 }
